cmake_minimum_required(VERSION 3.16)
file(GLOB SRCS "./src/*.cpp")
project(lacam)
add_library(${PROJECT_NAME} STATIC ${SRCS})
if( CPU STREQUAL "M1" )
    message("Configuring grid-pathfinding for M1 Mac.")
    target_compile_options(${PROJECT_NAME} PUBLIC -O3 -Wall -mtune=native -mcpu=apple-m1)
else()
    target_compile_options(${PROJECT_NAME} PUBLIC -O3 -Wall -mtune=native -march=native)
endif()
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_include_directories(${PROJECT_NAME} INTERFACE ./include)
